@@ -1,3 +1,13 @@
+2003-03-27  Hiroyuki Ito <hito@crl.go.jp>
+
+	* [w3m-dev 03830] Image size of gif animation
+	* w3mimg/fb/fb_gdkpixbuf.c (get_animation_size): added
+		(get_image_size): use get_animation_size()
+		(fb_image_load): ditto
+	* w3mimg/x11/x11_w3mimg.c (get_animation_size): added
+		(x11_load_image): use get_animation_size()
+		(x11_get_image_size): ditto
+
 2003-03-25  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03829] w3mimgdisplay -anim
@@ -7580,4 +7590,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.801 2003/03/24 15:45:55 ukai Exp $
+$Id: ChangeLog,v 1.802 2003/03/26 15:14:19 ukai Exp $
